# my-new-website

./: .gitignore  CHANGELOG.md  HOW-IT-ALL-WORKS.md  MISSION.md  PINNED.md  STARTUP-GUIDE.md  TESTING.md  admin.html  analytics.js  careers.html  education.html  index.html  locations.html  main.js  package-lock.json  package.json  portal-auth.js  portal-dashboard.html  portal-login.html  pytest.ini  staff.html  start.sh  stop.sh  style.css  testimonials.html  thank-you.html
.github/workflows/: tests.yml
admin-panel/: README.md  pyproject.toml
admin-panel/app/: dashboard.py
brief-builder/: pyproject.toml
brief-builder/app/: api.py  dashboard.py  drafts.py  sections.py
case-checklist/: pyproject.toml
case-checklist/app/: api.py  checklists.py  dashboard.py
client-info/: README.md  pyproject.toml
client-info/app/: dashboard.py
cloudflare-worker/: send-magic-link.js  site-settings-sync.js  wrangler.toml
country-reports-tool/: .env.example  .gitignore  pyproject.toml
country-reports-tool/app/: api.py  box_client.py  box_links.py  citations.py  config.py  dashboard.py  ingest.py  ingest_country.py  pdf_processor.py  vector_store.py  verify.py
country-reports-tool/app/pages/: admin.py
cover-letters/: pyproject.toml
cover-letters/app/: api.py  dashboard.py  dashboard_apple.py  drafts.py  templates.py
cover-letters/app/eoir_canvas/: index.html
declaration-drafter/: pyproject.toml
declaration-drafter/app/: api.py  dashboard.py  drafts.py  prompts.py
document-translator/: README.md  pyproject.toml
document-translator/app/: dashboard.py  drafts.py  translator.py
evidence-indexer/: pyproject.toml
evidence-indexer/app/: api.py  assembler.py  box_browser.py  brief_sections_store.py  dashboard.py  evidence.py  pdf_compiler.py  template_exporter.py  templates_store.py  translation_engine.py
evidence-indexer/app/brief_sections_canvas/: index.html
evidence-indexer/app/exhibit_canvas/: index.html
forms-assistant/: pyproject.toml
forms-assistant/app/: api.py  audit_log.py  dashboard.py  draft_store.py  form_definitions.py  ingestion.py  mapping_engine.py  mapping_store.py  multi_form.py  pdf_form_store.py  schema.py  sync_engine.py  tab_fill.py  tab_ingest.py  tab_mappings.py  tab_sync.py
hearing-prep/: pyproject.toml
hearing-prep/app/: dashboard.py  database.py  evaluator.py  prompts.py  transcription.py
legal-research/: pyproject.toml
legal-research/app/: api.py  case_law.py  dashboard.py
shared/: attorney_store.py  auth.py  box_client.py  box_documents.py  box_folder_browser.py  claude_client.py  client_banner.py  config_store.py  document_adder.py  draft_box.py  email_service.py  feedback_button.py  google_doc_creator.py  google_upload.py  pdf_form_extractor.py  preparer_store.py  preview_modal.py  recipient_manager.py  salesforce_client.py  theme.py  tool_help.py  tool_notes.py  usage_tracker.py
staff-dashboard/: app.py
tests/: conftest.py
tests/api/: conftest.py  test_brief_builder_api.py  test_case_checklist_api.py  test_cover_letters_api.py  test_declaration_drafter_api.py  test_evidence_indexer_api.py  test_forms_assistant_api.py  test_legal_research_api.py  test_timeline_api.py
tests/evidence_indexer/: conftest.py  test_evidence.py
tests/js/: analytics.test.js  portal-auth.test.js
tests/shared/: test_attorney_store.py  test_auth.py  test_box_client.py  test_config_store.py  test_email_service.py  test_pdf_form_extractor.py  test_salesforce_client.py  test_usage_tracker.py
timeline-builder/: README.md  pyproject.toml
timeline-builder/app/: api.py  dashboard.py  doc_extractor.py  events.py
