[project]
name = "admin-panel"
version = "0.1.0"
description = "Admin Panel — centralized configuration for O'Brien Immigration Law tools"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.41",
    "pymupdf>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
