[project]
name = "case-checklist"
version = "0.1.0"
description = "Immigration case checklist tracker for O'Brien Immigration Law"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit",
    "pydantic-settings",
    "python-dotenv",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
