[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "client-info"
version = "0.1.0"
description = "Client Info - View and edit Salesforce contact data with Box document browser"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.41.0",
    "python-dotenv>=1.0.0",
    "simple-salesforce>=1.12.0",
    "boxsdk>=3.12.0",
]
