[project]
name = "forms-assistant"
version = "0.1.0"
description = "Immigration forms completion assistant for O'Brien Immigration Law"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit",
    "pydantic-settings",
    "python-dotenv",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
