[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "forms-assistant"
version = "0.1.0"
description = "Immigration forms completion assistant for O'Brien Immigration Law"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "streamlit>=1.41.0",
    "python-docx>=1.2.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "pymupdf>=1.25.0",
    "simple-salesforce>=1.12.0",
    "box-sdk-gen>=1.8.0",
]
