[project]
name = "legal-research"
version = "0.1.0"
description = "Immigration case law research tool for O'Brien Immigration Law"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit",
    "python-docx",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
